--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body
 #cabecera
 {
     background: #33a;
-    box-shadow: 0px 2px 20px 10px rgba (0,0,0,0.75);
+    box-shadow: 0px 2px 20px 10px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
@@ -22,20 +22,20 @@ body
 {
     margin: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 #container
 {
    width: 70%;
    padding: 1em; 
    text-align: left;
-   border: 1px solid ###DDD;
+   border: 1px solid #DDD;
    margin: 0 auto;
 }
 
 #container h1
 {
-    font-size: 20px;s
+    font-size: 30px;
 }
 #post
 {
