--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,10 @@
 body
 {
-    background:rgb(249, 237, 245) ;
-    color:rgb(126, 27, 96); 
+    background:rgb(211, 210, 211) ;
+    color:rgb(189, 3, 106); 
     text-align: center;
     font-family: Arial;
-    font-size: 25px;
+    font-size: 20px;
     margin: 0.5;  
     padding: 1em;
 }
@@ -13,7 +13,7 @@ body
 {
     background: #f5439f;
     box-shadow: 0px 2px 20px 0px  rgba(128,100,125,5);
-    color: rgb(251, 246, 251);
+    color: rgb(255, 251, 253);
     font-weight: bold;
     margin: 0;
     padding: 1em;
@@ -46,6 +46,6 @@ body
 }
 #post
 {
-    background: white;
+    background: rgba(254, 254, 254, 0.92);
     padding:1em;
 }
