footer texto color

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -41,3 +41,11 @@ body
 {
     padding:1em;
 }
+
+#footer
+{
+    background: #777;
+    color:rgb(127, 30, 98);
+    text-align: center;
+    padding: 0.5em;
+}
