--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     background:rgb(211, 210, 211) ;
-    color:rgb(189, 3, 106); 
+    color:rgb(254, 3, 106); 
     text-align: center;
     font-family: Arial;
     font-size: 20px;
@@ -35,7 +35,7 @@ body
 {
    width: 70%;
    padding: 0; 
-   text-align: left;
+   text-align: justify;
    border: 1px solid rgb(10, 10, 10);
    margin: 0 auto;
 }
