--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     background:rgb(211, 210, 211) ;
-    color:rgb(254, 3, 106); 
+    color:rgb(197, 5, 85); 
     text-align: center;
     font-family: Arial;
     font-size: 20px;
@@ -11,7 +11,7 @@ body
 
 #cabecera
 {
-    background: #f5439f;
+    background: #ab2a6d;
     box-shadow: 0px 2px 20px 0px  rgba(128,100,125,5);
     color: rgb(255, 251, 253);
     font-weight: bold;
